Minor fix for horizontal scroll on mobile

--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -17,6 +17,7 @@ main {
     position: relative;
     transition: filter var(--animation-duration);
     margin: 0 var(--site-margins);
+    overflow-x: hidden;
 
     &.blur {
         filter: blur(0.75rem) brightness(45%);
