--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -262,6 +262,7 @@ main {
   position: relative;
   transition: filter var(--animation-duration);
   margin: 0 var(--site-margins);
+  overflow-x: hidden;
 }
 main.blur {
   filter: blur(0.75rem) brightness(45%);
